Add Railway deployment configuration

--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "node --watch src/app.js"
+    "start": "NODE_ENV=production node src/app.js",
+    "dev": "node --watch src/app.js",
+    "build": "cd ../client && npm install && npm run build"
   },
   "keywords": ["stock", "kosdaq", "daejeon", "finance"],
   "author": "",
