--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,20 @@
     "dev": "node --watch src/app.js",
     "build": "cd ../client && npm install && npm run build"
   },
-  "keywords": ["stock", "kosdaq", "daejeon", "finance"],
+  "keywords": [
+    "stock",
+    "kosdaq",
+    "daejeon",
+    "finance"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.5",
+    "cheerio": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "node-cron": "^3.0.3"
   }
 }
